--- a/login.html
+++ b/login.html
@@ -11,10 +11,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./login.css" />
   </head>
   <body>
-    <h1>Login</h1>
+    <div class="nav">
+      <img src="./3-19.jpg" alt="" />
+    </div>
     <div class="container">
+      <h1>Login</h1>
       <form action="/">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label"
@@ -45,6 +49,8 @@
           >
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+        or
+        <a href="./signup.html">Signup</a>
       </form>
     </div>
   </body>
